WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197412
WebCore::StyleColorScheme should not have explicitly-declared copy constructor
https://bugs.webkit.org/show_bug.cgi?id=197412
Summary
WebCore::StyleColorScheme should not have explicitly-declared copy constructor
Michael Catanzaro
Reported
2019-04-30 06:17:05 PDT
Since we enabled dark mode CSS for GTK, I can't see any real warnings past this warning spam: [1135/1984] Building CXX object Source/WebCore/CMakeFiles...s/WebCore/unified-sources/UnifiedSource-043dd90b-29.cpp.o In file included from ../../Source/WebCore/rendering/RenderObject.h:35, from ../../Source/WebCore/rendering/RenderElement.h:26, from ../../Source/WebCore/rendering/RenderLayerModelObject.h:25, from ../../Source/WebCore/rendering/RenderBoxModelObject.h:28, from ../../Source/WebCore/rendering/RenderBox.h:26, from ../../Source/WebCore/rendering/RenderLayer.h:51, from ../../Source/WebCore/rendering/svg/SVGRenderingContext.cpp:32, from DerivedSources/WebCore/unified-sources/UnifiedSource-043dd90b-29.cpp:1: ../../Source/WebCore/rendering/style/RenderStyle.h: In member function ‘void WebCore::RenderStyle::setColorScheme(WebCore::StyleColorScheme)’: ../../Source/WebCore/rendering/style/RenderStyle.h:1182:97: warning: implicitly-declared ‘constexpr WebCore::StyleColorScheme& WebCore::StyleColorScheme::operator=(const WebCore::StyleColorScheme&)’ is deprecated [-Wdeprecated-copy] 1182 | void setColorScheme(StyleColorScheme supported) { SET_VAR(m_rareInheritedData, colorScheme, supported); } | ^~~~~~~~~ ../../Source/WebCore/rendering/style/RenderStyle.h:94:39: note: in definition of macro ‘SET_VAR’ 94 | group.access().variable = value; \ | ^~~~~ In file included from ../../Source/WebCore/rendering/style/StyleRareInheritedData.h:41, from ../../Source/WebCore/rendering/style/RenderStyle.h:59, from ../../Source/WebCore/rendering/RenderObject.h:35, from ../../Source/WebCore/rendering/RenderElement.h:26, from ../../Source/WebCore/rendering/RenderLayerModelObject.h:25, from ../../Source/WebCore/rendering/RenderBoxModelObject.h:28, from ../../Source/WebCore/rendering/RenderBox.h:26, from ../../Source/WebCore/rendering/RenderLayer.h:51, from ../../Source/WebCore/rendering/svg/SVGRenderingContext.cpp:32, from DerivedSources/WebCore/unified-sources/UnifiedSource-043dd90b-29.cpp:1: ../../Source/WebCore/rendering/style/StyleColorScheme.h:39:5: note: because ‘WebCore::StyleColorScheme’ has user-provided ‘WebCore::StyleColorScheme::StyleColorScheme(const WebCore::StyleColorScheme&)’ 39 | StyleColorScheme(const StyleColorScheme& other) | ^~~~~~~~~~~~~~~~ The copy constructor should be removed.
Attachments
Patch
(1.76 KB, patch)
2019-04-30 06:19 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2019-04-30 06:19:45 PDT
Created
attachment 368555
[details]
Patch
Don Olmstead
Comment 2
2019-04-30 06:28:59 PDT
Comment on
attachment 368555
[details]
Patch r=me assuming bots are happy
WebKit Commit Bot
Comment 3
2019-04-30 07:32:48 PDT
Comment on
attachment 368555
[details]
Patch Clearing flags on attachment: 368555 Committed
r244768
: <
https://trac.webkit.org/changeset/244768
>
WebKit Commit Bot
Comment 4
2019-04-30 07:32:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-04-30 07:33:14 PDT
<
rdar://problem/50334395
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug